tdf#166709 special handling of transparency for metafile/PDF

For handling transparency for tiled bitmaps correctly in
metafiles the newly added linear transparency is too much
and leading to many single transprent bitmnaps. This is
not wrong but too much data and bloating the metafile/PDF.
For details and extensive explanations see text in commit.

Change-Id: I255db614e0c9eb8cd5130abbdaef4eda1c398684
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186630
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186739
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>